--- a/CLIENT/RESTSIQS/AndroidManifest.xml
+++ b/CLIENT/RESTSIQS/AndroidManifest.xml
@@ -6,13 +6,13 @@
     <uses-sdk android:minSdkVersion="18"/>
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
         <activity android:name="MainActivity_"
-                  android:label="@string/app_name">
+                  android:label="@string/app_name"
+                  android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity android:name=".SecondActivity_"/>
-        <activity android:name=".SecondActivity" android:label="Second"/>
     </application>
 </manifest>
