--- a/CLIENT/RESTSIQS/AndroidManifest.xml
+++ b/CLIENT/RESTSIQS/AndroidManifest.xml
@@ -5,7 +5,7 @@
           android:versionName="1.0">
     <uses-sdk android:minSdkVersion="18"/>
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
-        <activity android:name="MainActivity_"
+        <activity android:name=".MainActivity_"
                   android:label="@string/app_name"
                   android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">
             <intent-filter>
@@ -14,5 +14,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".SecondActivity_"/>
+        <activity android:name=".Actions.CourseDetailActivity_"></activity>
+        <activity android:name=".Actions.CourseListActivity_"></activity>
+        <activity android:name=".Actions.NoticeDetailActivity_"></activity>
+        <activity android:name=".Actions.NoticeListActivity_"></activity>
+        <activity android:name=".Actions.LoginActivity_"></activity>
+
     </application>
 </manifest>
