--- a/CLIENT/RESTSIQS/AndroidManifest.xml
+++ b/CLIENT/RESTSIQS/AndroidManifest.xml
@@ -20,5 +20,7 @@
         <activity android:name=".Actions.NoticeListActivity_"></activity>
         <activity android:name=".Actions.LoginActivity_"></activity>
 
+
     </application>
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 </manifest>
