--- a/SERVICEGUI/RESTSIQS/pom.xml
+++ b/SERVICEGUI/RESTSIQS/pom.xml
@@ -14,5 +14,10 @@
             <artifactId>httpclient</artifactId>
             <version>4.5.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.0.2</version>
+        </dependency>
     </dependencies>
 </project>
