--- a/CLIENT/RESTSIQS/app/build.gradle
+++ b/CLIENT/RESTSIQS/app/build.gradle
@@ -22,6 +22,10 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.alibaba:fastjson:1.2.8'
+    compile 'com.android.support:appcompat-v7:22.2.1'
+    compile 'com.android.support:support-v4:22.2.0'
     compile 'com.android.support:design:22.2.0'
+    compile 'com.alibaba:fastjson:1.2.8'
+    compile 'com.google.code.gson:gson:2.6.2'
+
 }
