--- a/CLIENT/RESTSIQS/app/src/main/AndroidManifest.xml
+++ b/CLIENT/RESTSIQS/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MainActivity"
             android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,10 +17,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Actions.TabActivity"></activity>
+        <activity
+            android:name=".Actions.TabActivity"></activity>
         <activity android:name=".Actions.LoginActivity"></activity>
-        <activity android:name=".Actions.CourseDetailActivity"></activity>
-        <activity android:name=".Actions.NoticeDetailActivity"></activity>
+        <activity
+            android:name=".Actions.CourseDetailActivity"></activity>
+        <activity
+            android:name=".Actions.NoticeDetailActivity"></activity>
     </application>
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 
